[package]
name = "svg2colored-png"
version = "1.2.0"
edition = "2021"
description = "An SVG to PNG converter"
authors = ["MCorange <mcorangecodes@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
homepage = "https://github.com/MCorange99/svg2colored-png"
repository = "https://github.com/MCorange99/svg2colored-png"
keywords = ["cli", "svg", "convert"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
# tokio = { version = "1", features = ["full"] }
eyre = "0.6.8"
color-eyre = "0.6.2"
usvg-text-layout = "0.29.0"
usvg = "0.29.0"
resvg = "0.29.0"
tiny-skia = "0.8.3"
log = "0.4.20"
simple_logger = "4.2.0"
